--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Fira+Mono:wght@400;500;700&family=Inter:wght@100..900&family=Jomhuria&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Macondo&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Odibee+Sans&family=Pathway+Gothic+One&family=Ravi+Prakash&display=swap"
+      href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Fira+Mono:wght@400;500;700&family=Inter:wght@100..900&family=Jomhuria&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Macondo&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Odibee+Sans&family=Pathway+Gothic+One&family=Ravi+Prakash&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="flex w-full">
           <div
-            class="h-[40px] w-[100vw] p-8 lg:bg-primary fixed flex justify-between items-center mx-0 lg:mx-auto lg:opacity-75 lg:border-b-2 lg:border-black"
+            class="h-[40px] w-[100vw] p-8 pt-12 lg:pt-8 lg:bg-primary fixed flex justify-between items-center mx-0 lg:mx-auto lg:opacity-75 lg:border-b-2 lg:border-black"
           >
             <!-- humburger menu start -->
             <button
@@ -49,7 +49,7 @@
             <!-- navbar menu start -->
             <div
               id="navbar-menu"
-              class="w-full font-Macondo absolute lg:static -top-[1000px] lg:top-0 left-0 right-0 pt-20 lg:pt-4 pb-2 bg-primary lg:bg-transparent opacity-75 flex gap-2 flex-wrap lg:flex-nowrap lg:w-1/3 mx-0 border-b-2 border-black lg:border-b-0 lg:border-transparent -translate-x-[1000px] transition-all duration-500"
+              class="w-full font-Macondo absolute lg:static -top-[1000px] lg:top-0 left-0 right-0 pt-20 lg:pt-4 pb-2 bg-primary lg:bg-transparent opacity-75 flex gap-2 flex-wrap lg:flex-nowrap lg:w-1/3 mx-0 border-b-2 border-black lg:border-b-0 lg:border-transparent -translate-x-[1000px] transition-all duration-1000 ease-in-out"
             >
               <div
                 class="group w-full flex justify-center hover:cursor-pointer"
@@ -101,7 +101,7 @@
             >
               <div
                 id="profile-content"
-                class="flex-col opacity-0 lg:opacity-100 text-[90%] translate-x-12 lg:translate-x-0 transition duration-300 ease-in"
+                class="flex-col opacity-0 lg:opacity-100 text-[90%] translate-x-12 lg:translate-x-0 transition duration-1000 ease-in"
               >
                 <p class="font-Montserrat-Alternates text-black drop-shadow-sm">
                   MY BIODATA
@@ -277,35 +277,35 @@
         <div class="flex flex-col gap-4 justify-center items-center">
           <div
             id="tk"
-            class="bg-[#1B2A2E] rounded-bl-full rounded-br-full flex justify-between border-t-2 border-white px-4 pb-6 text-white text-sm w-full lg:w-1/2 text-[13px] md:text-2xl lg:text-3xl lg:self-start"
+            class="bg-[#1B2A2E] rounded-bl-full rounded-br-full flex justify-between border-t-2 border-white px-4 pb-6 text-white text-[12px] w-full lg:w-1/2 md:text-2xl lg:text-3xl lg:self-start"
           >
             <h3 class="font-Odibee-Sans">TK TUNAS BANGSA</h3>
             <h3 class="font-ABeeZee">2010-2011</h3>
           </div>
           <div
             id="sd"
-            class="bg-[#1B2A2E] lg:w-1/2 rounded-bl-full rounded-br-full flex justify-between border-t-2 border-white px-4 pb-6 text-white text-sm w-full text-[13px] md:text-2xl lg:text-3xl lg:self-end"
+            class="bg-[#1B2A2E] lg:w-1/2 rounded-bl-full rounded-br-full flex justify-between border-t-2 border-white px-4 pb-6 text-white text-[12px] w-full md:text-2xl lg:text-3xl lg:self-end"
           >
             <h3 class="font-Odibee-Sans">SDN 31 SUMANI</h3>
             <h3 class="font-ABeeZee">2011-2017</h3>
           </div>
           <div
             id="mts"
-            class="bg-[#1B2A2E] rounded-bl-full lg:w-1/2 rounded-br-full flex justify-between border-t-2 border-white px-4 pb-6 text-white text-sm w-full text-[13px] md:text-2xl lg:text-3xl lg:self-start"
+            class="bg-[#1B2A2E] rounded-bl-full lg:w-1/2 rounded-br-full flex justify-between border-t-2 border-white px-4 pb-6 text-white text-[12px] w-full md:text-2xl lg:text-3xl lg:self-start"
           >
             <h3 class="font-Odibee-Sans">MTsN SOLOK</h3>
             <h3 class="font-ABeeZee">2017-2020</h3>
           </div>
           <div
             id="sma"
-            class="bg-[#1B2A2E] rounded-bl-full rounded-br-full flex justify-between border-t-2 border-white px-4 pb-6 text-white text-sm w-full lg:w-1/2 text-[13px] md:text-2xl lg:text-3xl lg:self-end"
+            class="bg-[#1B2A2E] rounded-bl-full rounded-br-full flex justify-between border-t-2 border-white px-4 pb-6 text-white text-[12px] w-full lg:w-1/2 md:text-2xl lg:text-3xl lg:self-end"
           >
             <h3 class="font-Odibee-Sans">SMAN 1 X KT SINGKARAK</h3>
             <h3 class="font-ABeeZee">2020-2023</h3>
           </div>
           <div
             id="universitas"
-            class="bg-[#1B2A2E] rounded-bl-full rounded-br-full flex justify-between border-t-2 border-white px-4 pb-6 text-white text-sm w-full lg:w-1/2 text-[13px] md:text-2xl lg:text-3xl lg:self-start"
+            class="bg-[#1B2A2E] rounded-bl-full rounded-br-full flex justify-between border-t-2 border-white px-4 pb-6 text-white text-[12px] w-full lg:w-1/2 md:text-2xl lg:text-3xl lg:self-start"
           >
             <h3 class="font-Odibee-Sans">UNIVERSITAS NEGERI PADANG</h3>
             <h3 class="font-ABeeZee">2023-????</h3>
@@ -337,7 +337,7 @@
               <img
                 src="src/img/gallery/gallery1.jpg"
                 alt="gallery1"
-                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale hover:-rotate-12"
               />
             </div>
           </div>
@@ -346,7 +346,7 @@
               <img
                 src="src/img/gallery/gallery2.jpg"
                 alt="gallery2"
-                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale hover:-rotate-12"
               />
             </div>
           </div>
@@ -355,7 +355,7 @@
               <img
                 src="src/img/gallery/gallery3.jpg"
                 alt="gallery3"
-                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale hover:-rotate-12"
               />
             </div>
           </div>
@@ -364,7 +364,7 @@
               <img
                 src="src/img/gallery/gallery4.jpg"
                 alt="gallery4"
-                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale hover:-rotate-12"
               />
             </div>
           </div>
@@ -373,7 +373,7 @@
               <img
                 src="src/img/gallery/gallery5.jpg"
                 alt="gallery5"
-                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale hover:-rotate-12"
               />
             </div>
           </div>
@@ -382,7 +382,7 @@
               <img
                 src="src/img/gallery/gallery6.jpg"
                 alt="gallery6"
-                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale hover:-rotate-12"
               />
             </div>
           </div>
@@ -391,7 +391,7 @@
               <img
                 src="src/img/gallery/gallery7.jpg"
                 alt="gallery7"
-                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale hover:-rotate-12"
               />
             </div>
           </div>
@@ -400,7 +400,7 @@
               <img
                 src="src/img/gallery/gallery8.jpg"
                 alt="gallery8"
-                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale hover:-rotate-12"
               />
             </div>
           </div>
@@ -409,7 +409,7 @@
               <img
                 src="src/img/gallery/gallery9.jpg"
                 alt="gallery9"
-                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale hover:-rotate-12"
               />
             </div>
           </div>
@@ -417,6 +417,83 @@
       </div>
     </section>
     <!-- gallery section end -->
+
+    <!-- footer start -->
+    <footer class="bg-[#F3F5F5] pt-6 pb-6 text-sm px-8 font-Red-Hat-Text">
+      <div class="container mx-auto">
+        <div
+          class="flex flex-col lg:flex-row justify-center lg:justify-between items-center"
+        >
+          <div class="flex flex-col items-center lg:items-end lg:self-end">
+            <span>created by rafid hilmi</span>
+            <span>rafidhilmi0504@gmail.com</span>
+          </div>
+          <div class="flex gap-4 items-center mt-4 w-44">
+            <!-- instagram -->
+            <a
+              href="https://instagram.com/rfd_hlmi08"
+              target="_blank"
+              class="p-4 rounded-full flex justify-center items-center bg-[#0B4445] text-[#3DA6A9] hover:bg-[#3da] hover:text-white"
+            >
+              <svg
+                role="img"
+                width="20"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+                class="fill-current"
+              >
+                <title>instagram</title>
+                <path
+                  d="M7.0301.084c-1.2768.0602-2.1487.264-2.911.5634-.7888.3075-1.4575.72-2.1228 1.3877-.6652.6677-1.075 1.3368-1.3802 2.127-.2954.7638-.4956 1.6365-.552 2.914-.0564 1.2775-.0689 1.6882-.0626 4.947.0062 3.2586.0206 3.6671.0825 4.9473.061 1.2765.264 2.1482.5635 2.9107.308.7889.72 1.4573 1.388 2.1228.6679.6655 1.3365 1.0743 2.1285 1.38.7632.295 1.6361.4961 2.9134.552 1.2773.056 1.6884.069 4.9462.0627 3.2578-.0062 3.668-.0207 4.9478-.0814 1.28-.0607 2.147-.2652 2.9098-.5633.7889-.3086 1.4578-.72 2.1228-1.3881.665-.6682 1.0745-1.3378 1.3795-2.1284.2957-.7632.4966-1.636.552-2.9124.056-1.2809.0692-1.6898.063-4.948-.0063-3.2583-.021-3.6668-.0817-4.9465-.0607-1.2797-.264-2.1487-.5633-2.9117-.3084-.7889-.72-1.4568-1.3876-2.1228C21.2982 1.33 20.628.9208 19.8378.6165 19.074.321 18.2017.1197 16.9244.0645 15.6471.0093 15.236-.005 11.977.0014 8.718.0076 8.31.0215 7.0301.0839m.1402 21.6932c-1.17-.0509-1.8053-.2453-2.2287-.408-.5606-.216-.96-.4771-1.3819-.895-.422-.4178-.6811-.8186-.9-1.378-.1644-.4234-.3624-1.058-.4171-2.228-.0595-1.2645-.072-1.6442-.079-4.848-.007-3.2037.0053-3.583.0607-4.848.05-1.169.2456-1.805.408-2.2282.216-.5613.4762-.96.895-1.3816.4188-.4217.8184-.6814 1.3783-.9003.423-.1651 1.0575-.3614 2.227-.4171 1.2655-.06 1.6447-.072 4.848-.079 3.2033-.007 3.5835.005 4.8495.0608 1.169.0508 1.8053.2445 2.228.408.5608.216.96.4754 1.3816.895.4217.4194.6816.8176.9005 1.3787.1653.4217.3617 1.056.4169 2.2263.0602 1.2655.0739 1.645.0796 4.848.0058 3.203-.0055 3.5834-.061 4.848-.051 1.17-.245 1.8055-.408 2.2294-.216.5604-.4763.96-.8954 1.3814-.419.4215-.8181.6811-1.3783.9-.4224.1649-1.0577.3617-2.2262.4174-1.2656.0595-1.6448.072-4.8493.079-3.2045.007-3.5825-.006-4.848-.0608M16.953 5.5864A1.44 1.44 0 1 0 18.39 4.144a1.44 1.44 0 0 0-1.437 1.4424M5.8385 12.012c.0067 3.4032 2.7706 6.1557 6.173 6.1493 3.4026-.0065 6.157-2.7701 6.1506-6.1733-.0065-3.4032-2.771-6.1565-6.174-6.1498-3.403.0067-6.156 2.771-6.1496 6.1738M8 12.0077a4 4 0 1 1 4.008 3.9921A3.9996 3.9996 0 0 1 8 12.0077"
+                />
+              </svg>
+            </a>
+            <!-- facebook -->
+            <a
+              href="https://facebook.com/rafid hilmi"
+              target="_blank"
+              class="p-4 rounded-full flex justify-center items-center bg-[#0B4445] text-[#3DA6A9] hover:bg-[#3da] hover:text-white"
+            >
+              <svg
+                width="20"
+                viewBox="0 0 35 35"
+                xmlns="http://www.w3.org/2000/svg"
+                class="fill-current"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M30.2273 0C32.8633 0 35 2.13683 35 4.77273V30.2273C35 32.8633 32.8633 35 30.2273 35H4.77273C2.13683 35 0 32.8633 0 30.2273V4.77273C0 2.13683 2.13683 0 4.77273 0H30.2273ZM30.2273 3.18182C31.1059 3.18182 31.8182 3.8941 31.8182 4.77273V30.2273C31.8182 31.1059 31.1059 31.8182 30.2273 31.8182H22.2727V20.6817H25.5758C26.2605 20.6817 26.8684 20.2435 27.0851 19.5938L27.7898 17.4795C28.0474 16.7068 27.4723 15.9089 26.6579 15.9089H22.2727V12.7271C22.2727 11.9317 23.0682 11.1362 23.8636 11.1362H27.0455C27.9241 11.1362 28.6364 10.424 28.6364 9.54533V8.45398C28.6364 7.94008 28.3082 7.47934 27.8112 7.3482C25.7258 6.79787 23.8636 6.79788 23.8636 6.79788C19.8864 6.79788 17.5 9.54533 17.5 11.9317V15.9089H14.3182C13.4396 15.9089 12.7273 16.6212 12.7273 17.4998V19.0907C12.7273 19.9694 13.4395 20.6817 14.3182 20.6817H17.5V31.8182H4.77273C3.8941 31.8182 3.18182 31.1059 3.18182 30.2273V4.77273C3.18182 3.8941 3.8941 3.18182 4.77273 3.18182H30.2273Z"
+                />
+              </svg>
+            </a>
+            <!-- github -->
+            <a
+              href="https://github.com/razorPG"
+              target="_blank"
+              class="p-4 rounded-full flex justify-center items-center bg-[#0B4445] text-[#3DA6A9] hover:bg-[#3da] hover:text-white"
+            >
+              <svg
+                width="20"
+                viewBox="0 0 35 35"
+                xmlns="http://www.w3.org/2000/svg"
+                class="fill-current"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M17.5 0C27.1652 0 35 8.03237 35 17.9426C35 25.8683 29.9915 32.5919 23.0422 34.9666C22.155 35.1434 21.84 34.5831 21.84 34.1053C21.84 33.5138 21.861 31.5819 21.861 29.1809C21.861 27.5079 21.301 26.416 20.6728 25.8595C24.57 25.415 28.665 23.8976 28.665 17.0061C28.665 15.0461 27.986 13.4467 26.8625 12.1902C27.0445 11.7369 27.6447 9.91191 26.691 7.44091C26.691 7.44091 25.2245 6.96013 21.8837 9.28063C20.4855 8.88338 18.9875 8.6835 17.5 8.6765C16.0125 8.6835 14.5163 8.88338 13.1198 9.28063C9.7755 6.96013 8.3055 7.44091 8.3055 7.44091C7.35525 9.91191 7.9555 11.7369 8.13575 12.1902C7.0175 13.4467 6.33326 15.0461 6.33326 17.0061C6.33326 23.8801 10.4195 25.4207 14.3063 25.874C13.8058 26.322 13.3525 27.1123 13.195 28.2726C12.1975 28.7311 9.6635 29.5246 8.1025 26.7823C8.1025 26.7823 7.17675 25.0583 5.41975 24.9323C5.41975 24.9323 3.7135 24.9097 5.30075 26.0227C5.30075 26.0227 6.447 26.5739 7.24325 28.6477C7.24325 28.6477 8.27051 31.8501 13.139 30.7651C13.1478 32.2649 13.1635 33.6783 13.1635 34.1053C13.1635 34.5796 12.8415 35.1346 11.9682 34.9683C5.01374 32.5971 0 25.8701 0 17.9426C0 8.03237 7.8365 0 17.5 0Z"
+                />
+              </svg>
+            </a>
+            <div class="hidden lg:flex">
+              <span class="bg-[#3DA6A9] w-2 h-[100px] rounded-md"> </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
 
     <!-- my javascript -->
     <script src="dist/js/script.js"></script>
